--- a/package.json
+++ b/package.json
@@ -9,32 +9,33 @@
     "deploy": "node deploy.js",
     "watch": "tsc -w",
     "prestart": "npm run build && func extensions install",
-    "start": "npm-run-all --parallel start:host watch",
+    "start": "concurrently \"npm run start:host\" \"npm run watch\"",
     "start:host": "func start",
     "test": "mocha -r ts-node/register test/**/*.test.ts",
     "zip": "node archiver.js"
   },
   "dependencies": {
-    "@azure/functions": "^4.0.0-alpha.9"
+    "@azure/functions": "^4.6.0"
   },
   "devDependencies": {
-    "@rollup/plugin-json": "^6.0.1",
-    "@rollup/plugin-commonjs": "^25.0.7",
-    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-commonjs": "^28.0.2",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^16.0.0",
     "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^11.1.5",
-    "@types/chai": "^4.3.8",
-    "@types/mocha": "^10.0.2",
-    "@types/node": "18.x",
-    "archiver": "^6.0.1",
-    "azure-functions-core-tools": "^4.x",
-    "chai": "^4.3.10",
-    "dotenv": "^16.3.1",
-    "mocha": "^10.2.0",
-    "rimraf": "^5.0.0",
-    "rollup": "^4.1.3",
-    "tslib": "^2.6.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.0.0"
+    "@rollup/plugin-typescript": "^12.1.2",
+    "@types/chai": "^5.0.1",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^22.10.5",
+    "archiver": "^7.0.1",
+    "azure-functions-core-tools": "^4.0.6610",
+    "chai": "^5.1.2",
+    "concurrently": "^9.1.2",
+    "dotenv": "^16.4.7",
+    "mocha": "^11.0.1",
+    "rimraf": "^6.0.1",
+    "rollup": "^4.30.1",
+    "ts-node": "^10.9.2",
+    "tslib": "^2.8.1",
+    "typescript": "^5.7.2"
   }
 }
